@@ -7,12 +7,22 @@ DIST soundconverter-2.1.5.tar.xz 195380 SHA256 cace2109b967744325e4ce8938d286b78
 EBUILD soundconverter-2.1.3.ebuild 1704 SHA256 a4e23f74fc59400e52102019993853914083f7f599ef31aadaab9db2f182e79f SHA512 dca70f5992c366f6fcf2578192b34ef61083c200fe57453aa08e5a2996216bd640cc094528ea3d36f3189d7828573eec1ee38cfa3a77413377fc5d0be9ffc38a WHIRLPOOL adf498ae5478f334e2a9a4a82f28ed0fcddea0000085770f06b4520ad0d5c69621d96cb35f882a709bdfdb824383426232b38adc60d78135c8113d7132a00aab
 EBUILD soundconverter-2.1.4.ebuild 1612 SHA256 6b1cbc400c5287d7dc4ba997ac3d12516b15d2493d9d0dbdfe80d48f6946103c SHA512 697c2769950949c7b1cce3573a208c463771a20dfda819681ce40f50019db46972abade4468885b44f8bdf06460bd2716e597f82cc78f60b64bb4ede4210f1f2 WHIRLPOOL ddb609d18a4fa9e05df7bda462945adc65bd146a3ba98cd8d99a7af4df1217dc55d2ede9d6fa3db11b3105347019735ee1212a285a179e179051147d9f8c877e
 EBUILD soundconverter-2.1.5.ebuild 1612 SHA256 0ff57bb92f8541b2ee4d4e8e5e834861fee8e314d66a5b0b416c82851c409bcb SHA512 ce235f8faa532b1f29a3c94879b80dbdd8ba5e155eb007077bf396e2769e48de833c3d19ee7fc64f4d615511c4fd826eec2eb5c5b70ca01ec089101162a6b503 WHIRLPOOL 7eb2d20480319deb78ace5a48a18f8ba163273de89d0e989d3b3c7d275082d10c56248fd06fa90ec2d0980646a889910c701d54a80052b6deb217e1b2553af00
-MISC ChangeLog 5665 SHA256 86d3286159f69d0677b92b0b57ec3dbe92209f2b90bf8fc4d7cd4414c44926dc SHA512 bb0332ac87589ced4117bb57a049c7d6815df52704e11471c4b6c76432bff3b59856b7330cff26bc901a18e241ea7fa7a8c387abd3761ec27baf63b5e7b37dc5 WHIRLPOOL e9c75a79adceaf587c1e385300bbc72edc41f5f8bc65a05ebfae8ce793b6ed0e47b82322b69626d44ac6836057a425d1f6a7dab246d5c3a4898abecfa849d3e7
-MISC metadata.xml 289 SHA256 5cd022b38224e316b134dd7809b45b40f338d0de2b447c6c0248681ce3763775 SHA512 42029fda888d9de77a5bb5d3e13dfa630a90f6c6f7c42c85394880d1894f37c8aacfbee8687486d390b462dcf54989dc01b4eeaad752266bf98259b1dc5e859a WHIRLPOOL 7194b9b2ed77c0dac896e6ee0ded63410e1bc443058a5fa5592626bd7d295fd14aa82c5f9da7ff2049c0cba0210a87a603fc4b6af8c59f8e26c1d97512e9821f
+MISC ChangeLog 5763 SHA256 c390b5f983f98e0215ffd361e403bcb13e5604a943a688b85a28d33e15c59d37 SHA512 6d1ca3fd55245a40548181d5dab7275495454b973fd48cd2fd6d73718ec251feb436569880090b49988fec384d268f5d5047a77874764159b5751a0ef80dade3 WHIRLPOOL 6700090d6cf09e68af2e5f35fe2dd686dcc87c7723f0b4f86781994276667c8375043b504fdf13f6699fdf5e07e25510b2575a4ef00e2e2b6fd3994c30ede1ac
+MISC metadata.xml 232 SHA256 99c5cef41626e1b55285228963391291d95edeed728a46981ebc25427b7da96d SHA512 06ccdc57155c950fa9884723132c5e748d7a493c21cb4f0fbf9cee6c62691c5e707dc433215bc79cfed3b255785697d08192bdd0576a831f6d636c263534208d WHIRLPOOL 5d6fda3d4745cb8da8138903e0874f3e19f560782c8ad1bf05c2b938ebaba38f8ec64e38c2d105684d7aa54ab8062dcccf7c07703eb84016650ec8b461234fcc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlTcjCkACgkQCaWpQKGI+9RbQwCfRYUsvL+19rqW9te/61eiafgc
-hnsAnR3n2rkZ+bKBSnEN1LElfgtCRKuz
-=GZfK
+iQIcBAEBCAAGBQJU34JhAAoJEKWIAHK7tR5CMvAP/1ax1CIg8I4dUFr5mXN3acUk
+28DUpNMWU0PpDhp5/PZ4kZXPXPGmhGLPT9BTfyGALSTce31zWGQq1f1nnYr7HAHl
+6gGxF8YltpPqkHO1OZ4uXysH5oetJNDCiEiXbqf+uu8l81WbcD5yFtbi9XRJUZ2C
+pHYm7GwQV8nlZ/kI67gd+OJS9LO2LJe4vn/o96hnRdwShSWTy/19l5kdReUwNJH+
+29Z6BToLL7Ac/eWOzX5G2cC1FsaNegZfmv92clGEpduRRKDdiPCRgZi9CrZ22Iiy
+4KbhMjrGG1uNb2n41eswo2x3bSFhWmGWBIOH9egXw+axvwOXN/iTDIhwyeNQ7oCb
+PVCK40pVEjY2vFbDgok2ZTtlu9Vx65zZkrLsipI6MuBxH2uTkKVuLGgq3UpV+YGw
+Q/Q3ShrIm1IaohLX9c3ltdstAviaDUQf+UFwV3lEhJqfwO+7Jn8kdyrwXjd0uGXj
+KlrdURieQfjuJufcr7pjdcejS7XOeKuZUQ5KKB+TYn0M6q4yrqjJ70CdIUuBtho0
+g7MMXerz//GNOZ1yev0OtK74jQoFDkgJmzFaSkNs9uHFdz4ApDrYKINpEsMts1gL
+ko0WLwYdnC3EnFw0bazUJp3iDLsUxrAi0kflrmhq86uV4KzhwAbFdVaDEe6N68a9
+J7gsHuXtMQgL3MvnqDBA
+=Oj/X
 -----END PGP SIGNATURE-----
