@@ -1,6 +1,9 @@
 # ChangeLog for www-client/rekonq
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/rekonq/ChangeLog,v 1.91 2015/02/14 14:38:44 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/rekonq/ChangeLog,v 1.92 2015/02/14 17:03:04 johu Exp $
+
+  14 Feb 2015; Johannes Huber <johu@gentoo.org> -rekonq-2.4.2.ebuild:
+  Remove old.
 
   14 Feb 2015; Agostino Sarubbo <ago@gentoo.org> rekonq-2.4.2-r1.ebuild:
   Stable for x86, wrt bug #517344
