@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/soundconverter
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/soundconverter/ChangeLog,v 1.38 2015/02/12 11:19:04 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/soundconverter/ChangeLog,v 1.39 2015/02/14 17:14:09 hanno Exp $
+
+  14 Feb 2015;  <hanno@gentoo.org> metadata.xml:
+  remove myself as maintainer in soundconverter
 
 *soundconverter-2.1.5 (12 Feb 2015)
 
